# binary-search-trees

./: .gitignore  binary-search-tree.cabal  cabal.haskell-ci  stack-9.10.1.yaml  stack-9.10.3.yaml  stack-9.12.2.yaml  stack-9.6.6.yaml  stack-9.8.1.yaml  stack-9.8.4.yaml  stack.yaml
.github/workflows/: haskell-ci.yml  simple-stack.yml  stack.yml
lib/Data/: BST.hs
src/Data/: BST.hs
src/Data/BST/: Internal.hs
test/: DocTests.hs  QuickCheckTests.hs  UnitTests.hs
