cabal-version: 2.2
name: binary-search-tree
version: 0.0.0.0

-- Version without internal library

tested-with:
  GHC == 9.12.2
  GHC == 9.10.3
  GHC == 9.8.4
  GHC == 9.6.7
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5

common common-build-parameters
  default-language:
    Haskell2010
  default-extensions:
    BlockArguments
    LambdaCase
    InstanceSigs
  ghc-options:
    -Wall
    -Wcompat

------------------------------------------------------------------
-- Library exporting the API

library
  import: common-build-parameters

  hs-source-dirs:
    lib
    src

  exposed-modules:
    Data.BST

  other-modules:
    Data.BST.Internal

  build-depends:
    , base                >= 4.12    && < 5

------------------------------------------------------------------
-- Testsuites

test-suite unittests
  import: common-build-parameters

  type: exitcode-stdio-1.0

  hs-source-dirs:
    test

  main-is:
    UnitTests.hs

  build-depends:
    , binary-search-tree
    -- inherited bounds
    , base
    -- new dependencies, need bounds
    , tasty               >= 1.2.3    && < 1.6
    , tasty-hunit         >= 0.10.0.2 && < 0.11


test-suite quickcheck
  import: common-build-parameters

  type: exitcode-stdio-1.0

  hs-source-dirs:
    src
    test

  main-is:
    QuickCheckTests.hs

  other-modules:
    Data.BST.Internal

  build-depends:
    , binary-search-tree
    -- inherited bounds
    , base
    -- new dependencies, need bounds
    , QuickCheck          >= 2.13.2    && < 2.19
    , tasty               >= 1.2.3     && < 1.6
    , tasty-quickcheck    >= 0.10.1.1  && < 0.12

  ghc-options:
    -Wno-orphans
    -Wno-missing-signatures


test-suite doctests
  import: common-build-parameters

  type: exitcode-stdio-1.0

  hs-source-dirs:
    src
    test

  main-is:
    DocTests.hs

  build-depends:
    , binary-search-tree
    -- inherited bounds
    , base
    -- new dependencies, need bounds
    , doctest >= 0.16.2 && < 0.25
